@@ -2,6 +2,7 @@ openmediavault-compose (8.1) UNRELEASED; urgency=medium
 
   * Support podman
   * Enable docker repo on install
+  * Add compose build job to Schedule tab
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 21 Dec 2025 16:43:38 +0000
 
